# malti

./: .gitignore  .pylintrc  .readthedocs.yaml  CODEOWNERS  LICENSE  README.md  build.bat  build.sh  check_all.bat  check_all.sh  closed_class_mappings.tsv  create_venv.bat  create_venv.sh  dediac.map  explore.ipynb  fst_utils.py  maltese_combined.tsv  maltese_transliterate.ipynb  malti2arabi.dict  malti2arabi.map  malti2arabi.py  malti2arabi.tsv  malti2arabi_diac.map  malti2arabi_fst.ipynb  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  rewrites.map
.circleci/: config.yml
chars/: arabi.sym  malti.sym  safebw.sym
data/arabi_data/: country_tn-maghreb-words.txt  (+1 more)
mappings/: #malti2arabi_diac.map  alif_initial.map  arabic2arabic.map  atrash.tsv  augmented_closed_class.map  baby_closed_class.map  dediac.map  everything_else.map  final_vowels.map  malti2arabi_1char.map  malti2arabi_2char.map  shadda.map  special.map
mappings_deterministic/: malti2arabi_1char_vowels_long.map  malti2arabi_1char_vowels_short.map  malti2arabi_2char.map  special_deterministic.map
rules/: alif_init.cross  malti2arabi.cross  malti2safebw.cross  shadda.cross
src/: analysis.py  dataset_processors.py  demo.ipynb  etymology_classification.py  etymology_classifiers.py  explore.ipynb  fst_utils.py  load_datasets.py  malti2arabi.py  malti2arabi_fst.py  malti_arabi.py  process.py  text_utils.py  token_mappings.py  token_rankers.py  translate.py  translit.py  transliterate.py  transliterate.sh  transliterate_cli.py  utils.py
tools/: sphinx_api_doc_maker.py  validate_project.py
(+75 files in other folders)
